update description in meta

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Headline Checker is designed to be displayed on a large screen in order to see all the headlines. 
+      The headlines will update automatically without any need to refresh the browser. 
+      Headline Checker will check for updates every five minutes."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
